--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                         <!-- Service Data Download Area -->
                         <div class="service_data_dl text-center">
                             <p><strong>For more information. Download our catalog!</strong></p>
-                            <a href="#" class="btn btn-pill btn-mat-green" download>Download PDF Document</a>
+                            <a href="#" data-toggle="modal" data-target="#catalog" data-dismiss="modal" class="btn btn-pill btn-mat-green" download>View Our Catalog</a>
                         </div>
                     </div></center>
                 </div>
@@ -323,7 +323,7 @@
                         <!-- Service Data Download Area -->
                         <div class="service_data_dl text-center">
                             <p><strong>For more information. Download our catalog!</strong></p>
-                            <a href="#" class="btn btn-pill btn-mat-green" download>Download PDF Document</a>
+                            <a href="#" data-toggle="modal" data-target="#catalog" data-dismiss="modal" class="btn btn-pill btn-mat-green" download>View Our Catalog</a>
                         </div>
                     </div></center>
                 </div>
@@ -352,7 +352,7 @@
 
                         <div class="service_data_dl text-center">
                             <p><strong>For more information. Download our catalog!</strong></p>
-                            <a href="#" class="btn btn-pill btn-mat-green" download>Download PDF Document</a>
+                            <a href="#" data-toggle="modal" data-target="#catalog" data-dismiss="modal" class="btn btn-pill btn-mat-green" download>View Our Catalog</a>
                         </div>
                     </div></center>
                 </div>
@@ -416,7 +416,7 @@
 
                         <div class="service_data_dl text-center">
                             <p><strong>For more information. Download our catalog!</strong></p>
-                            <a href="#" class="btn btn-pill btn-mat-green" download>Download PDF Document</a>
+                            <a href="#" data-toggle="modal" data-target="#catalog" data-dismiss="modal" class="btn btn-pill btn-mat-green" download>View Our Catalog</a>
                         </div>
                         
                     </div></center>
@@ -462,7 +462,7 @@
 
                         <div class="service_data_dl text-center">
                             <p><strong>For more information. Download our catalog!</strong></p>
-                            <a href="#" class="btn btn-pill btn-mat-green" download>Download PDF Document</a>
+                            <a href="#" data-toggle="modal" data-target="#catalog" data-dismiss="modal" class="btn btn-pill btn-mat-green" download>View Our Catalog</a>
                         </div>
 
                     </div></center>
@@ -490,7 +490,7 @@
                         </div>
                         <div class="single_part_content m-top-30">
                             <h5>Glass Doors</h5>
-                            <img class="img-thumbnail" src="img/bg-img/glass.png" alt="">
+                            <img class="img-thumbnail" src="img/bg-img/glassdoor.png" alt="">
                         </div>
                         <div class="single_part_content m-top-30">
                             <h5>Radius Doors</h5>
@@ -507,7 +507,7 @@
                         <!-- Service Data Download Area -->
                         <div class="service_data_dl text-center">
                             <p><strong>For more information. Download our catalog!</strong></p>
-                            <a href="#" class="btn btn-pill btn-mat-green" download>Download PDF Document</a>
+                            <a href="#" data-toggle="modal" data-target="#catalog" data-dismiss="modal" class="btn btn-pill btn-mat-green" download>View Our Catalog</a>
                         </div>
                     </div></center>
                 </div>
@@ -625,6 +625,29 @@
                         </div> -->
 
                         <script type="text/javascript" src="https://form.jotform.com/jsform/71423994377164"></script>
+
+                    </div></center>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="catalog" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog custom-modal" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Request a Quote</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
+                </div>
+                <div class="modal-body">
+                    <!-- Service Details Content Area -->
+                    <center><div class="service_details_content p-15">
+                        <!-- Service Details Thumb -->
+                        <!-- <div class="service_details_thumb">
+                            <img class="img-thumbnail" src="img/services-img/service-details.jpg" alt="">
+                        </div> -->
+
+                        <a href="https://online.flippingbook.com/view/303214/" class="fbo-embed" data-fbo-lightbox="yes" data-fbo-version="1" data-fbo-width="740px" data-fbo-height="480px" style="max-width: 100%">2017 Catalog</a><script async defer src="https://d33i2vgywgme2s.cloudfront.net/render/2.18.1.2-R300/embed.js"></script>
 
                     </div></center>
                 </div>
@@ -929,8 +952,8 @@
                 <div class="row">
                     <div class="col-12 col-md-6">
                         <div class="social_links_area">
-                            <a href="#" data-toggle="tooltip" data-placement="top" title="Facebook"><i class="fa fa-facebook"></i></a>
-                            <a href="#" data-toggle="tooltip" data-placement="top" title="Twitter"><i class="fa fa-twitter"></i></a>
+                            <a href="https://www.facebook.com/portadoorco" data-toggle="tooltip" data-placement="top" title="Facebook"><i class="fa fa-facebook"></i></a>
+                            <a href="https://twitter.com/portadoorco" data-toggle="tooltip" data-placement="top" title="Twitter"><i class="fa fa-twitter"></i></a>
                             <a href="#" data-toggle="tooltip" data-placement="top" title="Google Plus"><i class="fa fa-google-plus"></i></a>
                             <a href="#" data-toggle="tooltip" data-placement="top" title="Pinterest"><i class="fa fa-pinterest"></i></a>
                             <a href="#" data-toggle="tooltip" data-placement="top" title="Youtube"><i class="fa fa-youtube-play"></i></a>
@@ -939,7 +962,7 @@
                     <div class="col-12 col-md-6">
                         <!-- Bottom Footer Copywrite Text Area End -->
                         <div class="footer_bottom">
-                            <p>Made with <i class="fa fa-heart"></i> by <a href="#">Think Thought Media LLC.</a></p>
+                            <p>Made with <i class="fa fa-heart"></i> by <a href="http://thinkthoughtmedia.com">Think Thought Media LLC.</a></p>
                         </div>
                     </div>
                 </div>
