--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 
 </head>
 
+
 <body>
     <!-- Preloader Start -->
     <div id="preloader">
@@ -59,7 +60,8 @@
                             <!-- <li><a href="#service">Service</a></li> -->
                             <li><a href="#products">Products</a></li>
                             <li><a href="#gallery">Gallery</a></li>
-                            <li><a href="#contact">Contact</a></li>
+                            <li><a href="#" data-toggle="modal" data-target="#catalog" data-dismiss="modal">Catalog</a></li>
+                            <li><a href="mailto:info@portadoor.com" target="_top">Contact</a></li>
                         </ul>
                     </div>
                 </nav>
@@ -532,7 +534,7 @@
                             <div class="single_part_content m-top-30">
                                 <h4>Cabinet Door Quotes</h4>
                                 <img class="img-thumbnail" src="img/bg-img/cope.png" alt=""><br>
-                                <a href="#" data-toggle="modal" data-target="#doorQuotes" data-dismiss="modal" button type="button" class="btn btn-success mt-3">Get Your Door Quote!</button></a>
+                                <a  <a href="javascript:void( window.open( 'https://form.jotform.com/71414920677156', 'blank', 'scrollbars=yes, toolbar=no, width=700, height=500' ) )" button type="button" class="btn btn-success mt-3">Get Your Door Quote!</button></a>
                             </div>
                             <br>
 
@@ -544,7 +546,7 @@
                             <div class="single_part_content m-top-30">
                                 <h4>Drawer Box Quotes</h4>
                                 <img class="img-thumbnail" src="img/bg-img/drawer.png" alt=""><br>
-                                <a href="#" data-toggle="modal" data-target="#drawerQuotes" data-dismiss="modal" button type="button" class="btn btn-success mt-3">Get Your Drawer Box Quote!</button></a>
+                                <a  <a href="javascript:void( window.open( 'https://form.jotform.com/71423994377164', 'blank', 'scrollbars=yes, toolbar=no, width=700, height=500' ) ) " button type="button" class="btn btn-success mt-3">Get Your Drawer Box Quote!</button></a>
                             </div>
                     
                         </div>
@@ -598,8 +600,8 @@
                         <!-- <div class="service_details_thumb">
                             <img class="img-thumbnail" src="img/services-img/service-details.jpg" alt="">
                         </div> -->
-
                         <script type="text/javascript" src="https://form.jotform.com/jsform/71414920677156"></script>
+
 
                     </div></center>
                 </div>
@@ -636,7 +638,7 @@
         <div class="modal-dialog custom-modal" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Request a Quote</h5>
+                    <h5 class="modal-title" id="exampleModalLabel">Catalog</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
                 </div>
                 <div class="modal-body">
@@ -647,7 +649,7 @@
                             <img class="img-thumbnail" src="img/services-img/service-details.jpg" alt="">
                         </div> -->
 
-                        <a href="https://online.flippingbook.com/view/303214/" class="fbo-embed" data-fbo-lightbox="yes" data-fbo-version="1" data-fbo-width="740px" data-fbo-height="480px" style="max-width: 100%">2017 Catalog</a><script async defer src="https://d33i2vgywgme2s.cloudfront.net/render/2.18.1.2-R300/embed.js"></script>
+                        <a href="https://online.flippingbook.com/view/321958/" class="fbo-embed" data-fbo-id="321958" data-fbo-lightbox="yes" data-fbo-width="980px" data-fbo-height="800px" data-fbo-version="1" style="max-width: 100%">2018 Catalog</a><script async defer src="https://online.flippingbook.com/EmbedScriptUrl.aspx?m=redir&hid=321958"></script>
 
                     </div></center>
                 </div>
@@ -806,9 +808,9 @@
     <!-- ***** Video Area Start ***** -->
     <div class="video_area text-center agency_version section_padding_100 jarallax background-overlay" style="background-image: url(img/bg-img/1-4.jpg);">
         <!-- Single Speciality Video Area Start -->
-        <div class="video_play_area">
+        <!-- <div class="video_play_area">
             
-            <p>Watch this video</p>
+            <p>Watch this video</p> -->
             <!-- Video Link -->
             <a href="" class="video_btn"><i class="pe-7s-play" aria-hidden="true"></i></a>
         </div>
