update contact section

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                             <li><a href="#products">Products</a></li>
                             <li><a href="#gallery">Gallery</a></li>
                             <li><a href="#" data-toggle="modal" data-target="#catalog" data-dismiss="modal">Catalog</a></li>
-                            <li><a href="mailto:info@portadoor.com" target="_top">Contact</a></li>
+                            <li><a href="#" data-toggle="modal" data-target="#contactModal" data-dismiss="modal">Contact</a></li>
                         </ul>
                     </div>
                 </nav>
@@ -608,6 +608,32 @@
             </div>
         </div>
     </div>
+
+        <!-- Contact modal -->
+        <div class="modal fade" id="contactModal" tabindex="-1" role="dialog" aria-hidden="true">
+            <div class="modal-dialog custom-modal" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Contact Us</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
+                    </div>
+                    <div class="modal-body">
+                        <!-- Service Details Content Area -->
+                        <center>
+                            
+                            <h6>Phone: <a href="tel:203-888-6191">203 888 6191</a></h6>   
+                            <h6>Fax: <a href="tel:203-888-5803">203 888 5803</a></h6>  
+                            <h6>Email: <a href="mailto:info@portadoor.com" target="_top">info@portadoor.com</a></h6> 
+                            <br>
+                            <p>65 Cogwheel Lane<br>
+                            Seymour, CT<br>
+                            06483</p>
+    
+                        </div></center>
+                    </div>
+                </div>
+            </div>
+        </div>
 
 
     <!-- Drawer Quotes -->
