--- a/index.html
+++ b/index.html
@@ -844,11 +844,12 @@
     <!-- ***** Video Area End ***** -->
 
     <!-- ***** Project area start ***** -->
-    <section class="gallery_area section_padding_100_0 clearfix" id="works">
+
+    <!-- <section class="gallery_area section_padding_100_0 clearfix" id="works">
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <!-- Section Heading Start -->
+                   
                     <div class="section_heading">
                         <p>What We Create</p>
                         <h3>Our latest works</h3>
@@ -858,13 +859,11 @@
         </div>
 
         <div class = "insta-images" id="gallery">
-
-            <!-- LightWidget WIDGET --><script src="//lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/952b4b380bd15127937b0ec812fa0a3c.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
-
+            <script src="//lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/952b4b380bd15127937b0ec812fa0a3c.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
         </div>
+    </section> -->
 
-
-    </section>
+    
     <!-- ***** Project area end ***** -->
 
     <!-- ***** Cool Facts Area Start ***** -->
