--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
         <div class="modal-dialog custom-modal" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h3 class="modal-title" id="exampleModalLabel">Request a Quote</h3>
+                    <h3 class="modal-title" id="exampleModalLabel"></h3>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
                 </div>
                 <div class="modal-body">
@@ -532,7 +532,9 @@
                         <div class="single_part_content m-top-30">
                             <h4>Ordering System Coming Soon</h4>
                             <p>Please be patient as we upgrade our online ordering system.</p>
-                            <img class="img-thumbnail" src="img/bg-img/cope.png" alt=""><br>
+                            <p>For assistance with an order please email </p>
+                            <p><a href = "mailto: info@portadoor.com">info@portadoor.com</a> or call <a href="tel:2038886191">(203)888-6191</a></p>
+                            <img class="mb-3" class="img-thumbnail" src="img/bg-img/cope.png" alt=""><br>
                             <!-- Begin Mailchimp Signup Form -->
                             <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
                             <style type="text/css">
