add instagram gallery

--- a/index.html
+++ b/index.html
@@ -869,7 +869,7 @@
 
     <!-- ***** Project area start ***** -->
 
-    <!-- <section class="gallery_area section_padding_100_0 clearfix" id="works">
+     <section class="gallery_area section_padding_100_0 clearfix" id="works">
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -882,10 +882,9 @@
             </div>
         </div>
 
-        <div class = "insta-images" id="gallery">
-            <script src="//lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/952b4b380bd15127937b0ec812fa0a3c.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
-        </div>
-    </section> -->
+        <!-- LightWidget WIDGET --><script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script><iframe src="https://cdn.lightwidget.com/widgets/952b4b380bd15127937b0ec812fa0a3c.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width:100%;border:0;overflow:hidden;"></iframe>
+
+    </section> 
 
     
     <!-- ***** Project area end ***** -->
