--- a/index.html
+++ b/index.html
@@ -869,7 +869,7 @@
 
     <!-- ***** Project area start ***** -->
 
-     <section class="gallery_area section_padding_100_0 clearfix" id="works">
+     <section class="gallery_area section_padding_100_0 clearfix" id="gallery">
         <div class="container">
             <div class="row">
                 <div class="col-12">
