temp remove zendesk

--- a/index.html
+++ b/index.html
@@ -1048,7 +1048,7 @@
     <!-- Active js -->
     <script src="js/active.js"></script>
     <!-- Start of portadoor Zendesk Widget script -->
-    <script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=60722a6d-70bd-4dc3-9f01-dd6e242f2fd1"> </script>
+    <!-- <script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=60722a6d-70bd-4dc3-9f01-dd6e242f2fd1"> </script> -->
     <!-- End of portadoor Zendesk Widget script -->
 
 
