add pick up hours

--- a/index.html
+++ b/index.html
@@ -645,9 +645,13 @@
                             <h6>Fax: <a href="tel:203-888-5803">203 888 5803</a></h6>  
                             <h6>Email: <a href="mailto:info@portadoor.com" target="_top">info@portadoor.com</a></h6> 
                             <br>
+                            <h6>Customer order pick up hours are M-F from 9:00 AM - 3:00 PM</h6>
+                            <br>
                             <p>65 Cogwheel Lane<br>
                             Seymour, CT<br>
                             06483</p>
+
+
     
                         </div></center>
                     </div>
