update door/drawer quotes

--- a/index.html
+++ b/index.html
@@ -530,14 +530,14 @@
                     <!-- Service Details Content Area -->
 
                     
-                    <!-- <center>
+                    <center>
                         <div class="single_part_content m-top-30">
-                            <h4>Ordering System Coming Soon</h4>
+                            <h4>New Online Ordering System Coming Soon!</h4>
                             <p>Please be patient as we upgrade our online ordering system.</p>
                             <p>For assistance with an order please email </p>
-                            <p><a href = "mailto: info@portadoor.com">info@portadoor.com</a> or call <a href="tel:2038886191">(203)888-6191</a></p>
-                            <img class="mb-3" class="img-thumbnail" src="img/bg-img/cope.png" alt=""><br>
-                            <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
+                            <p><a href = "mailto: info@portadoor.com">info@portadoor.com</a> or call <a href="tel:2038886191">203-888-6191</a></p>
+                            <!-- <img class="mb-3" class="img-thumbnail" src="img/bg-img/cope.png" alt=""><br> -->
+                            <!-- <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
                             <style type="text/css">
                                 #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; width:100%;}
                             </style>
@@ -549,24 +549,29 @@
                                 <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_8d27927fb5a905d6c4a3a87b1_2389d498d6" tabindex="-1" value=""></div>
                                 <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
                                 </div>
-                            </form>
+                            </form> -->
                             </div>
                         </div>
-                    </center> -->
+                    </center>
 
                     <center>
                         <div class="service_details_content p-15">
 
                             <div class="single_part_content m-top-30">
-                                <h4>Cabinet Door Quotes</h4>
+                                <!-- <h4>Cabinet Door Quotes</h4> -->
                                 <img class="img-thumbnail" src="img/bg-img/cope.png" alt=""><br>
-                                <a  <a href="javascript:void( window.open( 'https://form.jotform.com/71414920677156', 'blank', 'scrollbars=yes, toolbar=no, width=700, height=500' ) )" button type="button" class="btn btn-success mt-3">Get Your Door Quote!</button></a>
+
+                                <a href="./PDFS/Door-Form.pdf" download>Door Order PDF Download</a>
+
                             </div>
                             <br>
                             <div class="single_part_content m-top-30">
-                                <h4>Drawer Box Quotes</h4>
+                                <!-- <h4>Drawer Box Quotes</h4> -->
                                 <img class="img-thumbnail" src="img/bg-img/drawer.png" alt=""><br>
-                                <a  <a href="javascript:void( window.open( 'https://form.jotform.com/71423994377164', 'blank', 'scrollbars=yes, toolbar=no, width=700, height=500' ) ) " button type="button" class="btn btn-success mt-3">Get Your Drawer Box Quote!</button></a>
+
+                                <a href="./PDFS/Drawer-Form.pdf" download>Drawer Order PDF Download</a>
+
+
                             </div>
                     
                         </div>
