--- a/catalog.html
+++ b/catalog.html
@@ -57,11 +57,11 @@
                     <div class="nav-menus-wrapper">
                         <a href="#" data-target="#quotes" data-toggle="modal" class="nav-button bg-mat-green align-to-right pigeon">Order Today!</a>
                         <ul class="nav-menu align-to-right" id="nav">
-                            <li class="active"><a href="#home">Home</a></li>
-                            <li><a href="#about">About</a></li>
+                            <li class="active"><a href="/index.html">Home</a></li>
+                            <li><a href="/index.html#about">About</a></li>
                             <!-- <li><a href="#service">Service</a></li> -->
-                            <li><a href="#products">Products</a></li>
-                            <li><a href="#gallery">Gallery</a></li>
+                            <li><a href="/index.html#products">Products</a></li>
+                            <li><a href="/index.html#gallery">Gallery</a></li>
                             <li><a href="#" data-toggle="modal" data-target="#catalog" data-dismiss="modal">Catalog</a></li>
                             <li><a href="#" data-toggle="modal" data-target="#contactModal" data-dismiss="modal">Contact</a></li>
                         </ul>
