--- a/index.html
+++ b/index.html
@@ -702,7 +702,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="exampleModalLabel">Catalog</h5>
-                    <p><a href="/catalog.html">Click Here</a> to request a physical catalog!</p>
+                    <p><a href="/catalog.html">Click Here to request a physical catalog! </a></p>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
                 </div>
                 <div class="modal-body">
