--- a/catalog.html
+++ b/catalog.html
@@ -49,8 +49,8 @@
                 <nav id="navigation1" class="navigation">
                     <!-- Logo Area -->
                     <div class="nav-header">
-                        <a href = "#"><img src = "img/bg-img/logo.png" class="mr-2 mb-1 logo"></a>
-                        <a class="nav-brand" href="#">Porta Door Co. Inc.</a>
+                        <a href = "/index.html"><img src = "img/bg-img/logo.png" class="mr-2 mb-1 logo"></a>
+                        <a class="nav-brand" href="/index.html">Porta Door Co. Inc.</a>
                         <div class="nav-toggle"></div>
                     </div>
                     <!-- Main Menus Wrapper -->
