add mobile catalog

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                             <!-- <li><a href="#service">Service</a></li> -->
                             <li><a href="#products">Products</a></li>
                             <li><a href="#gallery">Gallery</a></li>
-                            <li><a href="#" data-toggle="modal" data-target="#catalog" data-dismiss="modal">Catalog</a></li>
+                            <li><a href="https://online.flippingbook.com/view/506269/" data-toggle="modal" data-target="#catalog" data-dismiss="modal">Catalog</a></li>
                             <li><a href="#" data-toggle="modal" data-target="#contactModal" data-dismiss="modal">Contact</a></li>
                         </ul>
                     </div>
@@ -398,7 +398,7 @@
                         <div class="single_part_content m-top-30">
                             <h5>Base Cap</h5>
                             <img class="img-thumbnail" src="img/bg-img/basecap.png" alt="">
-                            <p>We make it possible for you to add moulding to the top piece of a base moulding, which increases the decorative look. it’s sometimes used with baseboard; base cap may also be used as a panel moulding or multipurpose profile.</p>
+                            <p>We make it possible for you to add moulding to the top piece of a base moulding, which increases the decorative look. it's sometimes used with baseboard; base cap may also be used as a panel moulding or multipurpose profile.</p>
                         </div>
                         <div class="single_part_content m-top-30">
                             <h5>Solid Crowns</h5>
@@ -1069,6 +1069,20 @@
     <script src="js/google-map/map-active.js"></script>
     <!-- Active js -->
     <script src="js/active.js"></script>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            var isMobile = /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
+            
+            if (isMobile) {
+                var catalogLink = document.querySelector('a[data-target="#catalog"]');
+                catalogLink.addEventListener('click', function(e) {
+                    e.preventDefault();
+                    window.location.href = 'https://online.flippingbook.com/view/506269/';
+                });
+            }
+        });
+    </script>
     <!-- Start of portadoor Zendesk Widget script -->
     <!-- <script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=60722a6d-70bd-4dc3-9f01-dd6e242f2fd1"> </script> -->
     <!-- End of portadoor Zendesk Widget script -->
